--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
-<title>Annelise Aldrich: Collected Works</title>
-<link rel="canonical" href="https://annelise.info">
-<meta name="description" content="I'm a registered architect with experience in the landscape design of urban parks and plazas. I love land, language, and the intersection of these things in human culture. I want to better understand the human place in the physical world.">
+<title>Annie and Mark are Getting Hitched</title>
+<link rel="canonical" href="https://markandannie.camp">
+<meta name="description" content="Come celebrate with us!">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -232,18 +232,6 @@
     user-select: none;
   }
 </style>
-<script type="application/ld+json">{
-  "@context": "http://schema.org/",
-  "@type": "ProfessionalService",
-  "additionalType":"http://www.productontology.org/id/Architect",
-  "name": "Annelise Aldrich: Collected Works",
-  "description":"I'm a registered architect with experience in the landscape design of urban parks and plazas. I love land, language, and the intersection of these things in human culture. I want to better understand the human place in the physical world.",
-  "logo":"https://anniealdrich.github.io/img/wordmark.png",
-  "image": "https://anniealdrich.github.io/img/snippet.jpg",
-  "email":"aldrich.annelise@gmail.com",
-  "telephone":"206.714.3870",
-  "url":"https://annelise.info"
-}</script>
 </head>
 
 
@@ -267,7 +255,7 @@
   </button>
 </header>
 
-<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)"><div class="titleThin">Annelise Aldrich:</div> Collected Works</div>
+<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)"><div class="titleThin">Annie + Mark:</div> 25 July</div>
 <div class="spacer" id="topPage"></div>
 <div class="background">
   <amp-img alt="Background Art"
