--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     font-family: 'Montserrat', sans-serif;
     color:#16161d;
     text-rendering:optimizeLegibility;
-    background:#f7f7fa;
+    background:#16161d;
     overflow-y:scroll;
   }
   a{
