--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 <section id="architecture" on="expand:architecture.scrollTo(duration=1000)">
     <header class="sectionTitle"><h1>Architecture</h1></header>
     <article>
-        <amp-google-document-embed src="https://www.gpo.gov/fdsys/pkg/GPO-CONAN-1992/pdf/GPO-CONAN-1992-6.pdf"
+        <amp-google-document-embed src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link"
           width="8.5"
           height="11"
           layout="responsive">
