--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 <section id="architecture" on="expand:architecture.scrollTo(duration=1000)">
     <header class="sectionTitle"><h1>Architecture</h1></header>
     <article>
-        <amp-google-document-embed src="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link"
+        <amp-google-document-embed src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTWK-HkvmEb87UOFX48F2evIGB0dbpRx4DyMmNIut90Y5ocYvECxD7ShldOxPyotXmMV7I0STG7JNzJ/pubhtml?gid=1869222851&single=true"
           width="8.5"
           height="11"
           layout="responsive">
