--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
 <body>
 
 <amp-sidebar id="sidebar1" layout="nodisplay" side="left" on="sidebarClose:hamburger.toggleClass(class=clicked)">
-  <a class="container" href="#rsvp" on="tap:accordion.expand(section='architecture'),architecture.scrollTo(duration=1000)"><h1>RSVP</h1></a>
-  <a class="container" href="#ranch" on="tap:accordion.expand(section='landscape'),landscape.scrollTo(duration=1000)"><h1>Flying Horseshoe Ranch</h1></a>
-  <a class="container" href="#lodging" on="tap:accordion.expand(section='rocks'),rocks.scrollTo(duration=1000)"><h1>Lodging</h1></a>
-  <a class="container" href="#travel" on="tap:accordion.expand(section='language'),language.scrollTo(duration=1000)"><h1>Travel</h1></a>
-  <a class="container" href="#schedule" on="tap:accordion.expand(section='shows'),shows.scrollTo(duration=1000)"><h1>Schedule</h1></a>
-  <a class="container" href="#registry" on="tap:accordion.expand(section='making'),making.scrollTo(duration=1000)"><h1>Registry</h1></a>
-  <a class="container" href="#faq" on="tap:accordion.expand(section='about'),about.scrollTo(duration=1000)"><h1>FAQ</h1></a>
+  <a class="container" href="#rsvp" on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=1000)"><h1>RSVP</h1></a>
+  <a class="container" href="#ranch" on="tap:accordion.expand(section='ranch'),ranch.scrollTo(duration=1000)"><h1>The Ranch</h1></a>
+  <a class="container" href="#lodging" on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=1000)"><h1>Lodging</h1></a>
+  <a class="container" href="#travel" on="tap:accordion.expand(section='travel'),travel.scrollTo(duration=1000)"><h1>Travel</h1></a>
+  <a class="container" href="#schedule" on="tap:accordion.expand(section='schedule'),schedule.scrollTo(duration=1000)"><h1>Schedule</h1></a>
+  <a class="container" href="#registry" on="tap:accordion.expand(section='registry'),registry.scrollTo(duration=1000)"><h1>Registry</h1></a>
+  <a class="container" href="#faq" on="tap:accordion.expand(section='faq'),faq.scrollTo(duration=1000)"><h1>FAQ</h1></a>
   <a class="container cv" href="https://drive.google.com/open?id=1uZegVp08r5wzthw5j2SpJgsxYM3A-WWo" target="_blank"><h1>Download CV</h1></a>
   <div class="contact"><h1>help@markandannie.camp</h1></div>
 </amp-sidebar>
@@ -270,7 +270,7 @@
 </section>
 
 <section id="ranch" on="expand:ranch.scrollTo(duration=1000)">
-    <header class="sectionTitle"><h1>Flying Horseshoe Ranch</h1></header>
+    <header class="sectionTitle"><h1>The Ranch</h1></header>
     <article>
 	<p><a href="https://www.ggnltd.com/university-of-washington-life-sciences-building" target="_blank">UW LIFE SCIENCES - GUSTAFSON GUTHRIE NICHOL</a><br><br>
 		Concept Design through Construction Documentation, project manager & project designer. Close research with the University of Washington Biology Department and Campus Architects to provide an important campus connector that also showcased the departments interests.
