--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     font-weight:inherit;
     border-bottom: .5px dashed #aaa;
   }
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+    }
   a:hover {
     background: #eee;
   }
