--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ button:focus {
     -ms-user-select: none;
     user-select: none;
     cursor: pointer;
+      outline: none;
   }
   .titleThin{
     font-weight:300;
@@ -213,7 +214,7 @@ button:focus {
     position: absolute;
     bottom:0;
     width:100%;
-    padding:3vh;
+    padding:4vh;
   }
   .background{
     position:fixed;
@@ -254,7 +255,7 @@ button:focus {
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" role="presentation"><rect x="30" y="47" width="40" height="6" rx="1" ry="1"/><rect x="30" y="36.691" width="40" height="6" rx="1" ry="1"/><rect x="30" y="57.309" width="40" height="6" rx="1" ry="1"/></svg>
   </button>
 </header>
-<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)"><div class="titleThin">Annie + Mark:</div> 25 July</div>
+<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">M ♡ A<div class="titleThin">25 July</div></div>
 <div class="spacer" id="topPage"></div>
 <div class="background">
   <amp-img alt="Background" src="img/background.jpg" layout="fill"></amp-img>
