--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
-<title>M ♡ A</title>
+<title>M  ☀  A</title>
 <link rel="canonical" href="https://markandannie.camp">
 <meta name="description" content="Come celebrate with us!">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -69,7 +69,7 @@ button:focus {
     position:absolute;
     top:3.8vh;
     width:calc(100% - 20vh);
-    font-size: 6vh;
+    font-size: 7vh;
     font-weight: 700;
     text-transform: uppercase;
     margin:0 10vh;
@@ -86,6 +86,7 @@ button:focus {
   }
   .titleThin{
     font-weight:300;
+    font-size: 6vh;
   }
   h1{
     font-size: 2vh;
@@ -255,7 +256,7 @@ button:focus {
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" role="presentation"><rect x="30" y="47" width="40" height="6" rx="1" ry="1"/><rect x="30" y="36.691" width="40" height="6" rx="1" ry="1"/><rect x="30" y="57.309" width="40" height="6" rx="1" ry="1"/></svg>
   </button>
 </header>
-<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)"><div class="titleThin">M  ♡  A</div>25 July</div>
+<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">M  ☀  A<div class="titleThin">25 July</div></div>
 <div class="spacer" id="topPage"></div>
 <div class="background">
   <amp-img alt="Background" src="img/background.jpg" layout="fill"></amp-img>
