--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
-<title>M  +  A</title>
+<title>M  ⁂  A</title>
 <link rel="canonical" href="https://markandannie.camp">
 <meta name="description" content="Come celebrate with us!">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
