--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@ button:focus {
     position:absolute;
     top:4.5vh;
     width:calc(100% - 20vh);
-    font-size: 9vh;
+    font-size: 11vh;
     font-weight: 300;
+    line-height: 11vh;
     text-transform: uppercase;
     margin:0 10vh;
     padding:0;
@@ -82,7 +83,7 @@ button:focus {
     -ms-user-select: none;
     user-select: none;
     cursor: pointer;
-      outline: none;
+    outline: none;
   }
   .titleThin{
     font-weight:700;
@@ -256,7 +257,7 @@ button:focus {
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" role="presentation"><rect x="30" y="47" width="40" height="6" rx="1" ry="1"/><rect x="30" y="36.691" width="40" height="6" rx="1" ry="1"/><rect x="30" y="57.309" width="40" height="6" rx="1" ry="1"/></svg>
   </button>
 </header>
-<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">M &nbsp;&nbsp;●&nbsp;&nbsp; A<br><div class="titleThin"> &nbsp;&nbsp;25 July</div></div>
+<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">M &nbsp;&nbsp;●&nbsp;&nbsp; A<br><div class="titleThin"> &nbsp;&nbsp;&nbsp;25 July</div></div>
 <div class="spacer" id="topPage"></div>
 <div class="background">
   <amp-img alt="Background" src="img/background.jpg" layout="fill"></amp-img>
