--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ button:focus {
   article{
     margin:0;
     padding:0;
-    background:#f7f7fa;
+    background:#f2f2f5;
   }
   .title{
     position:absolute;
