--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@ button:focus {
     font-weight:700;
     font-size: 2vh;
   }
+    #dot{
+        display:inline;
+    }
+     #dot:hover{
+        color:yellow;
+    }
   h1{
     font-size: 2vh;
     font-weight: 300;
@@ -257,7 +263,7 @@ button:focus {
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" role="presentation"><rect x="30" y="47" width="40" height="6" rx="1" ry="1"/><rect x="30" y="36.691" width="40" height="6" rx="1" ry="1"/><rect x="30" y="57.309" width="40" height="6" rx="1" ry="1"/></svg>
   </button>
 </header>
-<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">M &nbsp;&nbsp;●&nbsp;&nbsp; A<div class="titleThin"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;25 July</div></div>
+<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;25 July</div></div>
 <div class="spacer" id="topPage"></div>
 <div class="background">
   <amp-img alt="Background" src="img/background.jpg" layout="fill"></amp-img>
