--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ button:focus {
     border:none;
     background:#f7f7fa;
     color:#16161d;
-    border-bottom: .5px solid #16161d;
+    border-bottom: none;
     border-left: calc(50vw - 14vh) solid transparent;
     border-right: calc(50vw - 14vh) solid transparent;
     outline:none;
