--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ button:focus {
     color:#fff;
     background:none;
     border-top:none;
-    border-bottom: .3px solid #f7f7fa;
+    border-bottom: .3px solid #f2f2f5;
     border-left: calc(50vw - 14vh) solid transparent;
     border-right: calc(50vw - 14vh) solid transparent;
     box-sizing: border-box;
@@ -138,7 +138,7 @@ button:focus {
   }
   section[expanded] > .sectionTitle {
     border:none;
-    background:#f7f7fa;
+    background:#f2f2f5;
     color:#16161d;
     border-bottom: none;
     border-left: calc(50vw - 14vh) solid transparent;
@@ -146,7 +146,7 @@ button:focus {
     outline:none;
   }
   section:hover > .sectionTitle{
-    background:#f7f7fa;
+    background:#f2f2f5;
     color:#16161d;
     outline:none;
   }
