--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@ button:focus {
     }
      #dot:hover{
         color:yellow;
+        text-shadow: 0px 0px 1px yellow;
+         
     }
   h1{
     font-size: 2vh;
