--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ button:focus {
     }
      #dot:hover{
         color:yellow;
-        text-shadow: 0px 0px 1px yellow;
+        text-shadow: 0px 0px 3px #fff;
          
     }
   h1{
