--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ button:focus {
   }
     #dot{
         display:inline;
+        transition:all .1s;
     }
      #dot:hover{
         text-shadow: 0px 0px 10px #fff;
