--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ button:focus {
   }
     #dot{
         display:inline;
-        transition:all .4s;
+        transition:all 1s;
     }
      #dot:hover{
         text-shadow: 0px 0px 20px #fff, 0px 0px 5px #fff;
