--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@ button:focus {
   }
     #dot{
         display:inline;
-        transition:all 1s;
+        transition:all .7s;
     }
      #dot:hover{
-        text-shadow: 0px 0px 20px #fff, 0px 0px 5px #fff;
-         
+        text-shadow: 0px 0px 20px #fff, 0px 0px 5px #fff;         
     }
   h1{
     font-size: 2vh;
