--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ button:focus {
 </amp-sidebar>
 
 <header>
-  <button id="hamburger" on='tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)'>
+  <button id="hamburger" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" role="presentation"><rect x="30" y="47" width="40" height="6" rx="1" ry="1"/><rect x="30" y="36.691" width="40" height="6" rx="1" ry="1"/><rect x="30" y="57.309" width="40" height="6" rx="1" ry="1"/></svg>
   </button>
 </header>
