--- a/index.html
+++ b/index.html
@@ -275,7 +275,10 @@ button:focus {
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=1000)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
+		<p>We encourage you to review the Ranch and Lodging tabs prior to completing the RSVP form at the link below.
+Click here to RSVP.
 
+		</p>
     </article>
 </section>
 
