--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@ button:focus {
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.
-		Click here to RSVP.
 		</p>
+		<button id="RSVP">Click to RSVP</button>
     </article>
 </section>
 
