--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@ button:focus {
   }
   article{
     padding:0;
-
-	margin:18vh auto;
-    width:92%;
-    max-width:800px;
+	  margin:0;
+	  background: #f2f2f5;
   }
   .title{
     position:absolute;
@@ -107,7 +105,9 @@ button:focus {
   }
   p{
     font-size: 2vh;
-
+	margin:18vh auto;
+    width:92%;
+    max-width:800px;
     font-weight:300;
     color:#16161d;
   }
@@ -284,9 +284,8 @@ button:focus {
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=1000)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
-		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.
-		</p>
-		<div class="link">Click to RSVP</div>
+		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
+		<div class="link">Click to RSVP</div></p>
     </article>
 </section>
 
