--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ button:focus {
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
-		<div class="link">Click to RSVP</div></p>
+		<div class="link"><br>CLICK TO RSVP</div></p>
     </article>
 </section>
 
