--- a/index.html
+++ b/index.html
@@ -245,11 +245,12 @@ button:focus {
 	.link{
 		color:#fff;
 		background:#16161d;
-		width:200px;
-		height:120px;
+		width:300px;
+		height:100px;
 		text-align: center;
 		margin:0 auto;
 		font-weight: 700;
+		border-radius: 2px;
 	}
 </style>
 </head>
@@ -285,7 +286,7 @@ button:focus {
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
-		<div class="link"><br>CLICK TO RSVP</div></p>
+		<div class="link"><br><br><br>CLICK TO RSVP</div></p>
     </article>
 </section>
 
