--- a/index.html
+++ b/index.html
@@ -242,16 +242,23 @@ button:focus {
     -ms-user-select: none;
     user-select: none;
   }
-	.link{
-		color:#fff;
-		background:#16161d;
-		width:300px;
-		height:100px;
-		text-align: center;
-		margin:0 auto;
-		font-weight: 700;
-		border-radius: 3px;
-	}
+.link{
+	color:#fff;
+	background:#16161d;
+	width:300px;
+	height:110px;
+	text-align: center;
+	margin:0 auto;
+	font-weight: 700;
+	border-radius: 3px;
+	transition:all .4s;
+}
+.link:hover{
+	color:#16161d;
+	background:#eee;
+	width:320px;
+	height:120px;
+}
 </style>
 </head>
 
@@ -286,7 +293,7 @@ button:focus {
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
-		<div class="link"><br><br><br>CLICK TO RSVP</div></p>
+		<div class="link"><br><br>CLICK TO RSVP</div></p>
     </article>
 </section>
 
