--- a/index.html
+++ b/index.html
@@ -246,18 +246,16 @@ button:focus {
 	color:#fff;
 	background:#16161d;
 	width:300px;
-	height:110px;
+	height:100px;
 	text-align: center;
 	margin:0 auto;
 	font-weight: 700;
 	border-radius: 3px;
-	transition:all .4s;
+	transition:all .3s;
 }
 .link:hover{
-	color:#16161d;
-	background:#eee;
+	color:yellow;
 	width:320px;
-	height:120px;
 }
 </style>
 </head>
