--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@ button:focus {
 .link{
 	color:#fff;
 	background:#16161d;
+	box-shadow: 0,0,10px,10px,#eee;
 	width:300px;
 	height:100px;
 	text-align: center;
@@ -254,8 +255,7 @@ button:focus {
 	transition:all .3s;
 }
 .link:hover{
-	color:yellow;
-	width:320px;
+	border-radius: 50px;	
 }
 </style>
 </head>
@@ -291,7 +291,7 @@ button:focus {
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
-		<div class="link"><br><br>CLICK TO RSVP</div></p>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link" target="_blank"><div class="link"><br><br>CLICK TO RSVP</div></a></p>
     </article>
 </section>
 
