--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ button:focus {
 .link{
 	color:#fff;
 	background:#16161d;
-	box-shadow: 0,0,10px,10px,#eee;
+	box-shadow: 1px,3px,10px,10px,#eee;
 	width:300px;
 	height:100px;
 	text-align: center;
