--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ button:focus {
   }
   figure img{
     border-radius:3px;
+	box-shadow: 1px,3px,10px,10px,#eee;
   }
   figcaption{
     font-size: 14px;
