--- a/index.html
+++ b/index.html
@@ -247,16 +247,17 @@ button:focus {
 	color:#fff;
 	background:#16161d;
 	box-shadow: 1px,3px,10px,10px,#eee;
-	width:300px;
-	height:100px;
+	width:200px;
+	height:200px;
 	text-align: center;
 	margin:0 auto;
 	font-weight: 700;
 	border-radius: 3px;
 	transition:all .3s;
+	border-radius: 100px;
 }
 .link:hover{
-	border-radius: 50px;	
+	border-radius: 3px;	
 }
 </style>
 </head>
@@ -292,7 +293,7 @@ button:focus {
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link" target="_blank"><div class="link"><br><br>CLICK TO RSVP</div></a></p>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link" target="_blank"><div class="link"><br><br><br>CLICK TO RSVP</div></a></p>
     </article>
 </section>
 
