--- a/index.html
+++ b/index.html
@@ -249,15 +249,17 @@ button:focus {
 	box-shadow: 1px,3px,10px,10px,#eee;
 	width:200px;
 	height:200px;
-	text-align: center;
-	margin:0 auto;
-	font-weight: 700;
 	border-radius: 3px;
 	transition:all .3s;
 	border-radius: 100px;
 }
 .link:hover{
 	border-radius: 3px;	
+}
+.linkText{
+	text-align: center;
+	font-weight: 700;
+	margin-top:180px;
 }
 </style>
 </head>
@@ -293,7 +295,7 @@ button:focus {
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
 		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link" target="_blank"><div class="link"><br><br><br>CLICK TO RSVP</div></a></p>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link" target="_blank"><div class="link"><div class="linkText">CLICK TO RSVP</div></div></a></p>
     </article>
 </section>
 
