--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ button:focus {
     user-select: none;
   }
 .link{
+	margin:0 auto;
 	color:#fff;
 	background:#16161d;
 	box-shadow: 1px,3px,10px,10px,#eee;
@@ -252,6 +253,7 @@ button:focus {
 	border-radius: 3px;
 	transition:all .3s;
 	border-radius: 100px;
+	display: inline-block;
 }
 .link:hover{
 	border-radius: 3px;	
@@ -259,7 +261,7 @@ button:focus {
 .linkText{
 	text-align: center;
 	font-weight: 700;
-	margin-top:180px;
+	padding-top:180px;
 }
 </style>
 </head>
