--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@ button:focus {
   button {
       outline:none;
       z-index:50;
+	  border: none;
+	  background:none;
   }
   button svg{
       fill:#fff;
@@ -201,9 +203,7 @@ button:focus {
 	#hamburger{
 	position:fixed;
       top:0;
-      left:0;
-      background:none;
-      border: none;
+      left:0;      
       width:13vh;
       height:13vh;
       display: inline-block;
@@ -249,11 +249,11 @@ button:focus {
 	margin:0 auto;
 	color:#fff;
 	background:#16161d;
-	box-shadow: 1px,3px,10px,10px,#eee;
+	box-shadow: 1px,3px,10px,10px,#000;
 	width:200px;
 	height:200px;
 	border-radius: 3px;
-	transition:all .3s;
+	transition:all .4s;
 	border-radius: 100px;
 	display: inline-block;
 }
@@ -263,7 +263,7 @@ button:focus {
 .linkText{
 	text-align: center;
 	font-weight: 700;
-	padding-top:180px;
+	padding-top:80px;
 }
 </style>
 </head>
