--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ button:focus {
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=1000)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
-		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
+		<p>Check out the Ranch and Lodging info before submitting the RSVP form below ⬎		
 		<button class="link" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link';"><div class="linkText">CLICK TO RSVP</div></button></p>
     </article>
 </section>
