--- a/index.html
+++ b/index.html
@@ -259,10 +259,13 @@ button:focus {
 .link:hover{
 	border-radius: 3px;	
 }
+
 .linkText{
 	text-align: center;
+	font-weight: 300;
+}
+.link:hover .linkText{
 	font-weight: 700;
-	padding-top:20px;
 }
 </style>
 </head>
