--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ button:focus {
       z-index:50;
 	  border: none;
 	  background:none;
+	  cursor:pointer;
   }
   button svg{
       fill:#fff;
-      transition:all .3s;
-      cursor:pointer;
+      transition:all .3s;      
   }
   button:hover svg{
        transform: rotate(90deg);
@@ -255,6 +255,7 @@ button:focus {
 	border-radius: 3px;
 	transition:all .3s;
 	border-radius: 80px;
+	position: relative;
 }
 .link:hover{
 	border-radius: 3px;	
@@ -263,6 +264,7 @@ button:focus {
 .linkText{
 	text-align: center;
 	font-weight: 300;
+	transition:all .3s;
 }
 .link:hover .linkText{
 	font-weight: 700;
