--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@ button:focus {
 	transition:all .3s;
 	border-radius: 80px;
 	position: relative;
+	left:50%;
+	top:10vh;
 }
 .link:hover{
 	border-radius: 3px;	
