--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ button:focus {
 	margin:0 auto;
 	color:#fff;
 	background:#16161d;
-	box-shadow: 1px,3px,5px,5px,#000;
+	box-shadow: 1px 3px 5px #000;
 	width:160px;
 	height:160px;
 	border-radius: 3px;
