--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ button:focus {
     user-select: none;
   }
 .link{
-	margin:0 auto;
+	margin-left:-80px;
 	color:#fff;
 	background:#16161d;
 	box-shadow: 1px 3px 5px #000;
