--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ button:focus {
   }
 .link{
 	margin-left:-80px;
+	margin-bottom:80px;
 	color:#fff;
 	background:#16161d;
 	box-shadow: 1px 3px 5px #000;
@@ -257,7 +258,7 @@ button:focus {
 	border-radius: 80px;
 	position: relative;
 	left:50%;
-	top:10vh;
+	top:15vh;
 }
 .link:hover{
 	border-radius: 3px;	
