--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@ button:focus {
   }
 .link{
 	margin-left:-80px;
-	margin-bottom:80px;
+	margin-bottom:150px;
 	color:#fff;
 	background:#16161d;
-	box-shadow: 1px 3px 5px #000;
+	box-shadow: 1px 3px 10px #eee;
 	width:160px;
 	height:160px;
 	border-radius: 3px;
