--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ button:focus {
     opacity:1;
   }
   amp-sidebar{
-    width: 26vw;
+    width: 26vh;
     background:#fff;
     margin:0;
     padding:0;
@@ -300,8 +300,8 @@ button:focus {
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=1000)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
-		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.		
-		<button class="link" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link';"><div class="linkText">CLICK TO RSVP</div></button></p>
+		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.</p>		
+		<button class="link" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link';" target="_blank"><div class="linkText">CLICK TO RSVP</div></button>
     </article>
 </section>
 
