--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ button:focus {
     padding:0;
   }
   p{
-    font-size: 2vh;
+    font-size: 14px;
 	margin:18vh auto;
     width:92%;
     max-width:800px;
@@ -247,7 +247,7 @@ button:focus {
   }
 .link{
 	margin-left:-80px;
-	margin-bottom:150px;
+	padding-bottom:150px;
 	color:#fff;
 	background:#16161d;
 	box-shadow: 1px 3px 10px #eee;
@@ -258,10 +258,10 @@ button:focus {
 	border-radius: 80px;
 	position: relative;
 	left:50%;
-	top:15vh;
 }
 .link:hover{
 	border-radius: 3px;	
+	font-size: 16px;
 }
 .linkText{
 	text-align: center;
