--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@ button:focus {
   }
 .link{
 	margin-left:-80px;
-	padding-bottom:150px;
+	margin-top:-200px;
+	margin-bottom:150px;
 	color:#fff;
 	background:#16161d;
 	box-shadow: 1px 3px 10px #eee;
