--- a/index.html
+++ b/index.html
@@ -247,7 +247,6 @@ button:focus {
   }
 .link{
 	margin-left:-80px;
-	margin-top:-200px;
 	margin-bottom:150px;
 	color:#fff;
 	background:#16161d;
@@ -259,6 +258,7 @@ button:focus {
 	border-radius: 80px;
 	position: relative;
 	left:50%;
+	top:-200px;
 }
 .link:hover{
 	border-radius: 3px;	
