--- a/index.html
+++ b/index.html
@@ -246,8 +246,9 @@ button:focus {
     user-select: none;
   }
 .link{
+	font-size: 12px;
 	margin-left:-80px;
-	margin-bottom:150px;
+	margin-bottom:18vh;
 	color:#fff;
 	background:#16161d;
 	box-shadow: 1px 3px 10px #eee;
@@ -258,11 +259,10 @@ button:focus {
 	border-radius: 80px;
 	position: relative;
 	left:50%;
-	top:-100px;
 }
 .link:hover{
 	border-radius: 3px;	
-	font-size: 17px;
+	font-size: 13px;
 }
 .linkText{
 	text-align: center;
