--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ button:focus {
   p.uppercase {
       text-transform: uppercase;
   }
+p.centered {
+     text-align: center;
+  }
   amp-img.cover img {
     object-fit: cover;
   }
@@ -246,7 +249,7 @@ button:focus {
     user-select: none;
   }
 .link{
-	font-size: 12px;
+	font-size: 14px;
 	margin-left:-80px;
 	margin-bottom:18vh;
 	color:#fff;
@@ -262,7 +265,7 @@ button:focus {
 }
 .link:hover{
 	border-radius: 3px;	
-	font-size: 13px;
+	font-size: 15px;
 }
 .linkText{
 	text-align: center;
@@ -301,7 +304,7 @@ button:focus {
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=1000)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
-		<p>Check out the Ranch and Lodging info before submitting the RSVP form below.</p>		
+		<p class="centered">Check out the Ranch and Lodging info before submitting the RSVP form below.</p>		
 		<button class="link" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link';" target="_blank"><div class="linkText">CLICK TO RSVP</div></button>
     </article>
 </section>
