--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ p.centered {
   }
   figure img{
     border-radius:3px;
-	box-shadow: 1px,3px,10px,10px,#eee;
+	box-shadow: 1px 3px 10px #ddd;
   }
   figcaption{
     font-size: 14px;
@@ -258,7 +258,7 @@ p.centered {
 	margin-bottom:18vh;
 	color:#fff;
 	background:#16161d;
-	box-shadow: 1px 3px 10px #eee;
+	box-shadow: 1px 3px 10px #ddd;
 	width:160px;
 	height:160px;
 	border-radius: 3px;
@@ -269,7 +269,7 @@ p.centered {
 }
 .link:hover{
 	border-radius: 3px;	
-	font-size: 15px;
+	font-size: 14.5px;
 }
 .linkText{
 	text-align: center;
