--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ p.centered {
   }
   figure img{
     border-radius:3px;
-	box-shadow: 1px 3px 10px #ddd;
+	box-shadow: 1px 3px 10px #ccc;
   }
   figcaption{
     font-size: 14px;
@@ -255,7 +255,7 @@ p.centered {
 	margin-bottom:18vh;
 	color:#fff;
 	background:#16161d;
-	box-shadow: 1px 3px 10px #ddd;
+	box-shadow: 1px 3px 10px #ccc;
 	width:160px;
 	height:160px;
 	border-radius: 3px;
