--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ p.centered {
   <a class="container" href="#schedule" on="tap:accordion.expand(section='schedule'),schedule.scrollTo(duration=700)"><h1>Schedule</h1></a>
   <a class="container" href="#registry" on="tap:accordion.expand(section='registry'),registry.scrollTo(duration=700)"><h1>Registry</h1></a>
   <a class="container" href="#faq" on="tap:accordion.expand(section='faq'),faq.scrollTo(duration=700)"><h1>FAQ</h1></a>
-  <div class="contact"><h1>help@markandannie.camp</h1></div>
+  <div class="contact"><h1>hi@markandannie.camp</h1></div>
 </amp-sidebar>
 
 <header>
