--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ p.centered {
 	font-size: 14px;
 	margin-left:-80px;
 	margin-bottom:18vh;
+	margin-top:-4vh;
 	color:#fff;
 	background:#16161d;
 	box-shadow: 1px 3px 10px #ccc;
