--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ p.centered {
   }
   figure img{
     border-radius:3px;
-	box-shadow: 1px 3px 10px #ccc;
+	box-shadow: 1px 3px 8px #bbb;
   }
   figcaption{
     font-size: 14px;
@@ -256,7 +256,7 @@ p.centered {
 	margin-top:-4vh;
 	color:#fff;
 	background:#16161d;
-	box-shadow: 1px 3px 10px #ccc;
+	box-shadow: 1px 3px 8px #bbb;
 	width:160px;
 	height:160px;
 	border-radius: 3px;
