--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ p.centered {
   }
   figure img{
     border-radius:3px;
-	box-shadow: 1px 3px 8px #bbb;
+	box-shadow: 13px 3px 8px #aaa;
   }
   figcaption{
     font-size: 14px;
@@ -181,7 +181,7 @@ p.centered {
     opacity:1;
   }
   amp-sidebar{
-    width: 37vh;
+    width: 36vh;
     background:#fff;
     margin:0;
     padding:0;
@@ -256,7 +256,7 @@ p.centered {
 	margin-top:-4vh;
 	color:#fff;
 	background:#16161d;
-	box-shadow: 1px 3px 8px #bbb;
+	box-shadow: 13px 3px 8px #aaa;
 	width:160px;
 	height:160px;
 	border-radius: 3px;
@@ -314,8 +314,10 @@ p.centered {
 <section id="ranch" on="expand:ranch.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>The Ranch</h1></header>
     <article>
-	<p><a href="https://www.ggnltd.com/university-of-washington-life-sciences-building" target="_blank">UW LIFE SCIENCES - GUSTAFSON GUTHRIE NICHOL</a><br><br>
-		Concept Design through Construction Documentation, project manager & project designer. Close research with the University of Washington Biology Department and Campus Architects to provide an important campus connector that also showcased the departments interests.
+	<p>We have found the nearby town, Roslyn, as the site for our first home.<br><br>
+	Flying Horseshoe Ranch is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.<br><br>
+	The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam. 
+
 	   <figure class="small">
         <amp-img alt="UW Out in Front"
           src="img/UW Life-Sciences_Out in Front.jpg"
@@ -325,15 +327,6 @@ p.centered {
         </amp-img>
         <figcaption>UW Out in Front Show Poster</figcaption>
       </figure>
-      <figure class="small">
-         <amp-img alt="Interior Court"
-           src="img/LSB_2.jpg"
-           width="1200"
-           height="1167"
-           layout="responsive">
-         </amp-img>
-         <figcaption>Interior Court</figcaption>
-       </figure>
     </p>
     </article>
 </section>
