--- a/index.html
+++ b/index.html
@@ -315,18 +315,18 @@ p.centered {
     <header class="sectionTitle"><h1>The Ranch</h1></header>
     <article>
 	<p>We have found the nearby town, Roslyn, as the site for our first home.<br><br>
-	Flying Horseshoe Ranch is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.<br><br>
-	The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam. 
+	Flying Horseshoe Ranch is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.
 
 	   <figure class="small">
-        <amp-img alt="UW Out in Front"
-          src="img/UW Life-Sciences_Out in Front.jpg"
-          width="1600"
-          height="2239"
+        <amp-img alt="Ranch Map"
+          src="img/map.jpg"
+          width="1500"
+          height="1800"
           layout="responsive">
         </amp-img>
-        <figcaption>UW Out in Front Show Poster</figcaption>
+        <figcaption>Flying Horseshoe Ranch</figcaption>
       </figure>
+			The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam. 
     </p>
     </article>
 </section>
