--- a/index.html
+++ b/index.html
@@ -159,9 +159,11 @@ p.centered {
 	  font-weight: 700;
   }
   figure {
-    margin:18vh auto;
+    margin:2vh auto;
     width:92%;
     max-width:800px;
+	border-radius:3px;
+	box-shadow: 13px 3px 8px #aaa;
   }
   figure img{
     border-radius:3px;
@@ -172,7 +174,6 @@ p.centered {
     text-align: right;
     text-transform: uppercase;
     margin-top:8px;
-    font-weight: 700;
     opacity:0;
     transition: all .1s;
     transition-timing-function: ease-in-out;
