--- a/index.html
+++ b/index.html
@@ -159,11 +159,9 @@ p.centered {
 	  font-weight: 700;
   }
   figure {
-    margin:2vh auto;
+    margin:0 auto;
     width:92%;
     max-width:800px;
-	border-radius:3px;
-	box-shadow: 13px 3px 8px #aaa;
   }
   figure img{
     border-radius:3px;
@@ -316,19 +314,19 @@ p.centered {
     <header class="sectionTitle"><h1>The Ranch</h1></header>
     <article>
 	<p>We have found the nearby town, Roslyn, as the site for our first home.<br><br>
-	Flying Horseshoe Ranch is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.
+	Flying Horseshoe Ranch is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.</p>
 
-	   <figure class="small">
-        <amp-img alt="Ranch Map"
-          src="img/map.jpg"
-          width="1500"
-          height="1800"
-          layout="responsive">
-        </amp-img>
-        <figcaption>Flying Horseshoe Ranch</figcaption>
-      </figure>
-			The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam. 
-    </p>
+   <figure class="small">
+	<amp-img alt="Ranch Map"
+	  src="img/map.jpg"
+	  width="1500"
+	  height="1800"
+	  layout="responsive">
+	</amp-img>
+	<figcaption>Flying Horseshoe Ranch</figcaption>
+  </figure>
+		
+	<p>The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam.</p>
     </article>
 </section>
 
