--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@ button:focus {
   }
   p{
     font-size: 16px;
-	margin:18vh auto;
+	margin:16vh auto;
     width:92%;
     max-width:800px;
     font-weight:300;
     color:#16161d;
+	  line-height:14px;
   }
   p.uppercase {
       text-transform: uppercase;
