--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@ button:focus {
   }
   p{
     font-size: 16px;
-	margin:10vh auto;
+	margin:12vh auto;
     width:92%;
     max-width:800px;
     font-weight:300;
     color:#16161d;
-	  line-height:22px;
+	  line-height:26px;
   }
   p.uppercase {
       text-transform: uppercase;
@@ -163,6 +163,7 @@ p.centered {
     margin:0 auto;
     width:92%;
     max-width:800px;
+	  margin-bottom:-22px;
   }
   figure img{
     border-radius:3px;
@@ -252,7 +253,7 @@ p.centered {
 .link{
 	font-size: 14px;
 	margin-left:-80px;
-	margin-bottom:10vh;
+	margin-bottom:12vh;
 	margin-top:-4vh;
 	color:#fff;
 	background:#16161d;
