--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@ p.centered {
     margin:0 auto;
     width:92%;
     max-width:800px;
-	  margin-bottom:-22px;
+	  margin-bottom:-24px;
   }
-  figure img{
+  figure amp-img{
     border-radius:3px;
 	box-shadow: 1px 3px 8px #aaa;
   }
