--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ p.centered {
   }
   figure amp-img{
     border-radius:3px;
-	box-shadow: 1px 3px 8px #aaa;
+	box-shadow: 1px 3px 10px #ddd;
   }
   figcaption{
     font-size: 14px;
@@ -316,7 +316,8 @@ p.centered {
     <header class="sectionTitle"><h1>The Ranch</h1></header>
     <article>
 	<p>We have found the nearby town, Roslyn, as the site for our first home.<br><br>
-	Flying Horseshoe Ranch is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.</p>
+	Flying Horseshoe Ranch is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.<br><br>
+		The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam.</p>
 
    <figure class="small">
 	<amp-img alt="Ranch Map"
@@ -328,7 +329,7 @@ p.centered {
 	<figcaption>Flying Horseshoe Ranch</figcaption>
   </figure>
 		
-	<p>The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam.</p>
+	<p>See the lodging section for more info about where to stay.</p>
     </article>
 </section>
 
