--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ p.centered {
 	<figcaption>Flying Horseshoe Ranch</figcaption>
   </figure>
 		
-	<p class="centered">3190 Red Bridge Rd, Cle Elum, WA 98922<br><br>See the lodging section for more info about where to stay.</p>
+	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum, WA 98922</a><br><br>See the lodging section for more info about where to stay.</p>
     </article>
 </section>
 
