--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ p.centered {
 	  height="1800"
 	  layout="responsive">
 	</amp-img>
-	<figcaption>Flying Horseshoe Ranch</figcaption>
+	<figcaption>Ranch Map</figcaption>
   </figure>
 		
 	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum, WA 98922</a><br><br>See the lodging section for more info about where to stay.</p>
