--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ p.centered {
 	<figcaption>Ranch Map</figcaption>
   </figure>
 		
-	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum, WA 98922</a><br><br>See the lodging section for more info about where to stay.</p>
+	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum, WA 98922</a><br><a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>See the lodging section for more info about where to stay.</p>
     </article>
 </section>
 
