--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ p.centered {
 <section id="ranch" on="expand:ranch.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>The Ranch</h1></header>
     <article>
-	<p>We have found the town of Roslyn as the site for our first home.<br><br>
+	<p>We have found the town of Roslyn, WA as the site for our first home.<br><br>
 	10 miles to the East, <a href="https://www.flyinghorseshoeranch.com/" target="_blank">Flying Horseshoe Ranch</a> is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.<br><br>
 		The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam.</p>
 
