--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ p.centered {
 <section id="rsvp" on="expand:rsvp.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>RSVP</h1></header>
     <article>
-		<p class="centered">Come celebrate with us!<br><br>Also, be sure to check out the Ranch and Lodging sections before submitting the RSVP form below.</p>		
+		<p class="centered">Come celebrate with us!<br><br>Check out the Ranch and Lodging sections before submitting the RSVP form below.</p>		
 		<button class="link" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfN1s79wXHtSkZ9eZpOW9kwDCE-QvfIbgKtIJlhawHSaUpTDA/viewform?usp=sf_link';" target="_blank"><div class="linkText">CLICK TO RSVP</div></button>
     </article>
 </section>
