--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@ p.centered {
 <section id="lodging" on="expand:lodging.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Lodging</h1></header>
     <article>
+		<p>The Ranch sleeps about 100 people, and we would love to have every bed filled! Our intention is to have a fun weekend of connection and easy gathering. The accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>On-ranch offerings:</p>
     </article>
 </section>
 
