--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@ p.centered {
     <article>
 	<p>We have found the town of Roslyn, WA as the site for our first home.<br><br>
 	10 miles to the East, <a href="https://www.flyinghorseshoeranch.com/" target="_blank">Flying Horseshoe Ranch</a> is one of our earliest links to the east side of the WA Cascades. Annie attended summer horse camp here as a kid. It was one of her first adventures as a young lady into the open Ponderosa forest, rolling hills, and Kittitas Valley fields.<br><br>
-		The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam.</p>
+		The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys the Teanaway Valley and extends up the hill across the road—ample space to roam.<br><br>
+        <a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum, WA 98922</a></p>
 
    <a href="https://markandannie.camp/img/map.jpg" target="_blank"><figure class="small">
 	<amp-img alt="Ranch Map"
@@ -329,7 +330,7 @@ p.centered {
 	<figcaption>Ranch Map</figcaption>
   </figure></a>
 		
-	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum, WA 98922</a><br><br><a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>See the lodging section for more info about where to stay.</p>
+	<p class="centered"><a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>See the lodging section for more info about where to stay.</p>
     </article>
 </section>
 
