--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
+<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
 <title>M  &nbsp;&nbsp;●&nbsp;&nbsp;  A</title>
 <link rel="canonical" href="https://markandannie.camp">
 <meta name="description" content="Come celebrate with us!">
@@ -339,6 +340,8 @@ p.centered {
     <header class="sectionTitle"><h1>Lodging</h1></header>
     <article>
 		<p>The Ranch sleeps about 100 people, and we would love to have every bed filled! Our intention is to have a fun weekend of connection and easy gathering. The accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>On-ranch offerings:</p>
+        <amp-iframe width="200" height="100" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
+        </amp-iframe>
     </article>
 </section>
 
